# histogramr

./: .gitignore  .travis.yml  AUTHORS  README.md  autogen.sh  configure.ac
src/: Makefile.am  data.c  data.h  freq.c  freq.h  global.h  histogramr.c  options.c  options.h  structs.h
